Add comments to Makefile.amm files

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,8 @@
+
+# SUBDIRS is a special variable listing all directories that make should recurse into before
+# processing the current directory
 SUBDIRS = src
-dist_doc_DATA = README.adoc
+# The line dist_doc_DATA = README.adoc causes README.adoc to be distributed and installed in docdir
+#  Files listed with the _DATA primary are not automatically part of the tarball built with make dist,
+# so we add the dist_ prefix so they get distributed
+dist_doc_DATA = README.html
