README.adoc is packaged, but not installed, README.html - opposite

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -4,7 +4,7 @@
 # so we add the dist_ prefix so they get distributed
 # Some primaries also allow additional prefixes that control other aspects of automake’s behavior.
 # The currently defined prefixes are ‘dist_’, ‘nodist_’, ‘nobase_’, and ‘notrans_’.
-dist_doc_DATA = README.html
+nodist_doc_DATA = README.html
 dist_noinst_DATA = README.adoc
 
 README.html : README.adoc
